Ultimos Ajustes: Actualización de plantillas y nuevos archivos estáticos

--- a/templates/anexo.html
+++ b/templates/anexo.html
@@ -484,7 +484,7 @@ ggplot(data = heatmap_long, aes(x = Index, y = Country, fill = Value)) +
     <!-- Botones de Navegación -->
     <section class="text-center">
         <a href="/conclusiones" class="btn btn-outline-secondary btn-lg me-3"><i class="bi bi-arrow-left-circle me-2"></i>Anterior: Conclusiones Generales</a>
-        <a href="/referencias" class="btn btn-outline-primary btn-lg"><i class="bi bi-arrow-right-circle me-2"></i>Siguiente: Referencias</a>
+      <i class="bi bi-arrow-right-circle me-2"></i>Final</a>
     </section>
 </section>
 {% endblock %}
