--- a/templates/conclusiones.html
+++ b/templates/conclusiones.html
@@ -126,7 +126,7 @@
             Los códigos utilizados en este análisis están disponibles para su revisión y descarga. Estos incluyen scripts de Python y R utilizados para la limpieza de datos, análisis estadístico y generación de visualizaciones.
         </p>
         <p>
-            Para acceder a los códigos, por favor, contáctanos a través de [tu correo electrónico] o visita nuestro repositorio en <a href="https://github.com/tu-repositorio" target="_blank" class="text-decoration-none">GitHub</a>.
+            Para acceder a los códigos, por favor, contáctanos a través de leonardovalentinhp1@gmail.com o visita nuestro repositorio en <a href="https://github.com/Valentinhp/PAGINA_ANALISIS" target="_blank" class="text-decoration-none">GitHub</a>.
         </p>
     </div>
     
