--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Informe de Análisis de Mercados Internacionales{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Favicon -->
+    <link rel="icon" href="{{ url_for('static', path='/images/favicon.png') }}" type="image/png">
     <!-- Meta descripción para SEO -->
     <meta name="description" content="Informe de Análisis de Mercados Internacionales basado en índices económicos como el costo de vida, renta y poder adquisitivo.">
     <!-- Bootstrap CSS -->
