--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!-- templates/index.html -->
 {% extends "base.html" %}
 
-{% block title %}Inicio - Informe de Análisis de Mercados Internacionales{% endblock %}
+{% block title %}Inicio - Informe de Visualizacion de Mercados Internacionales{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
