Ultimos Ajustes: Footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,8 +72,8 @@
     <!-- Footer -->
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
-            <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
-            <p>Contacto: <a href="mailto:contacto@tuempresa.com" class="text-white">contacto@tuempresa.com</a></p>
+            <p>&copy; 2024 Proyecto Final. Todos los derechos reservados.</p>
+            <p>Contacto: <a href="mailto:contacto@tuempresa.com" class="text-white">contacto@proyectoValentin.com</a></p>
             <div>
                 <a href="https://www.facebook.com/" class="text-white me-3" target="_blank"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.twitter.com/" class="text-white me-3" target="_blank"><i class="bi bi-twitter"></i></a>
